Test commit through Atom terminal, no real changes ✅

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Todo App</title>
+	<title>Todo App by Scottie</title>
 </head>
 <body>
 	<h1>My Todos</h1>
