--- a/add.html
+++ b/add.html
@@ -15,9 +15,19 @@
     <button type="submit">Add</button>
   </form>
   <script>
+    // require the electron helper
+    const electron = require('electron');
+    // destructure the ipcRenderer to send messages to the app off
+    // the electron object
+    const { ipcRenderer } = electron;
+
     document.querySelector('form').addEventListener('submit', (event) => {
       event.preventDefault();
-        debugger;
+      // destructure the value off the input
+      const { value } = document.querySelector('input');
+      // send the event
+      // Next step is to set up the ipcMain in index.html to receive
+      ipcRenderer.send('todo:add', value);
     });
   </script>
 </body>
