--- a/main.html
+++ b/main.html
@@ -6,5 +6,20 @@
 </head>
 <body>
 	<h1>My Todos</h1>
+	<ul>
+
+	</ul>
+	<script>
+		// get a reference to electron
+		const electron = require('electron');
+		// destructure ipcRenderer from electron
+		const { ipcRenderer } = electron;
+		ipcRenderer.on('todo:add', (event, todo) => {
+			const li = document.createElement('li');
+			const text = document.createTextNode(todo);
+			li.appendChild(text);
+			document.querySelector('ul').appendChild(li);
+		});
+	</script>
 </body>
 </html>
