✅ Added 'clear' functionality

--- a/main.html
+++ b/main.html
@@ -20,6 +20,11 @@
 			li.appendChild(text);
 			document.querySelector('ul').appendChild(li);
 		});
+
+		// ipcRenderer.on here
+		ipcRenderer.on('todo:clear', (event) => {
+			document.querySelector('ul').innerHTML = '';
+		});
 	</script>
 </body>
 </html>
